# sus-sounds

./: .gitattributes  .gitignore  ARCHITECTURE.md  BACKLOG.md  CEO-REVIEW.md  ENG-LAYOUT.md  PRESETS.md  SOUND-DESIGN.md
.github/workflows/: determinism.yml
core/: CMakeLists.txt  PhysicsCore.cpp  PhysicsCore.h  Rng.h  SoundEngine.cpp  SoundEngine.h  Wav.h
core/tests/: determinism_test.cpp
core/tools/: render_demo.cpp
plugin/: CMakeLists.txt
plugin/Source/: BoardComponent.cpp  BoardComponent.h  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
spike/: README.md  spike_plinko.py  spike_tempo.py
spike/xplat/: CMakeLists.txt  README.md  main.c  out_windows.txt
